--- a/pickup.css
+++ b/pickup.css
@@ -27,7 +27,7 @@ body {
 .pickup {
   display: block;
   background-color: #fff;
-  color:black;
+  color: black;
   padding: 26px 0;
   text-align: center;
   font-size: 30px;
@@ -109,16 +109,21 @@ body {
   border-style: solid;
 }
 
-.choices:hover{
+/* .choices:hover{
   background: linear-gradient(90deg, #57c785 0%, #b3cc6e 100%);
   color: #fff;
   border-color: #57c785;
-}
+} */
 
 /* .choices:focus{
   background: linear-gradient(90deg, #57c785 0%, #b3cc6e 100%);
   color: #fff;
   border-color: #57c785;
+} */
+
+/* .clicked {
+  background-color: black !important; 
+  color: white;
 } */
 
 .text {
@@ -129,7 +134,6 @@ body {
   display: block;
   font-size: 24px;
   margin-top: 15px;
-  
 }
 
 .cardb {
@@ -141,6 +145,3 @@ body {
   font-size: 18px;
   margin: 9px 35px;
 }
-
-
-
